Removed slow sorting routine when adding key to a node. Now insertions are done using binary search to find the insertion point.